--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,11 @@
 [phases.install]
 cmds = [
-"composer install --optimize-autoloader --no-scripts --no-interaction --ignore-platform-req=ext-gd --ignore-platform-req=ext-exif",
-"npm install"
+  "composer install --optimize-autoloader --no-scripts --no-interaction --ignore-platform-req=ext-gd --ignore-platform-req=ext-exif",
+  "npm install"
 ]
+
 [phases.build]
 cmds = ["npm run build"]
+
 [start]
-cmd = "mkdir -p /tmp/storage/framework/sessions && mkdir -p /tmp/storage/framework/views && mkdir -p /tmp/storage/framework/cache && mkdir -p /tmp/storage/logs && php artisan config:clear && php artisan serve --host=0.0.0.0 --port=$PORT"
+cmd = "mkdir -p /tmp/storage/framework/sessions && mkdir -p /tmp/storage/framework/views && mkdir -p /tmp/storage/framework/cache && mkdir -p /tmp/storage/logs && mkdir -p /tmp/cache && php artisan config:clear && php artisan serve --host=0.0.0.0 --port=$PORT"
